<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_capturaprod2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="644dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_cveprod" />

        <EditText
            android:id="@+id/editCveprod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/c_cveprod"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_nombreprod" />

        <EditText
            android:id="@+id/editNombreprod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/c_nombreprod"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_autorprod" />

        <EditText
            android:id="@+id/editAutorprod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/c_autorprod"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_fotoprod" />

        <Spinner
            android:id="@+id/spnFotoprod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_precioprod" />

        <EditText
            android:id="@+id/editPrecioprod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/c_precioprod"
            android:inputType="numberDecimal" />

        <CheckBox
            android:id="@+id/chkActivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_activo" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_guardar" />
    </LinearLayout>
</FrameLayout>